<resources>
    <string name="app_name">Randipe</string>
    <string name="recipes">Recipes</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="this_is_settings_fragment">Edit your profile/preferences here!</string>
    <string name="this_is_profile_fragment">This is Profile Fragment</string>
    <string name="name">Name:</string>
    <string name="nameTag">John Doe</string>
    <string name="password">Password:</string>
    <string name="age">Age:</string>
    <string name="email">Email</string>
    <string name="submit_changes">SUBMIT CHANGES</string>
    <string name="logout">Logout</string>
    <string-array name="entries_array">
        <item>No Requirements</item>
        <item>Vegetarian</item>
        <item>Vegan</item>
        <item>Lactose intolerant</item>
        <item>Gluten intolerant</item>
        <item>Pescatarian</item>
    </string-array>

</resources>